✨ Updated: Header, Footer and center content with bg, text color

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #f5786c;
+    color: #fff;
+    height: 100vh;
+    overflow: hidden;
+}
+  
