Set up routing with BrowserRouter and fixed useContext issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    background-color: #f5786c;
+    background-color: #913e37;
     color: #fff;
     height: 100vh;
     overflow: hidden;
